apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - port: 3000
      targetPort: 3000
